tests/transpiler/x/hs/substring_builtin.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/substring_builtin.hs:5:12: error:
    Variable not in scope: substring :: String -> t0 -> t1 -> a0
  |
5 |     print (substring "mochi" 1 4)
  |            ^^^^^^^^^
